--- a/html/new-template.html
+++ b/html/new-template.html
@@ -10,7 +10,7 @@
 		content="Txto is a free service that lets you create the fastest, simplest, most shareable web pages on the internet using any phone, tablet, or computer you have." />
 	<meta name="author" content="Wei" />
 
-	<meta property="og:url" content="https://txto.onrender.com" />
+	<meta property="og:url" content="https://txto.eu.org" />
 	<meta property="og:title" content="Txto - Fast web pages for everybody" />
 	<meta property="og:image" content="//cdn.jsdelivr.net/npm/txto@1.0.5/txto_196.png" />
 	<meta property="og:site_name" content="Txto" />
@@ -66,7 +66,7 @@
 		
 		<fieldset id="adv-field" style="display: none;">
 			<legend>Advanced options (optional)</legend>
-			<label for="custom-url-input">Custom URL (Letters, numbers, dashes. Goes after txto.onrender.com/)</label>
+			<label for="custom-url-input">Custom URL (Letters, numbers, dashes. Goes after txto.eu.org/)</label>
 			<input class="text-input" type="text" id="custom-url-input" name="custom_url" value="" autocapitalize="none" >
 			<label for="custom-edit-code" >Custom edit code </label>
 			<input class="text-input" type="text" id="custom-edit-code" name="custom_edit_code" autocapitalize="none" value="">
