--- a/html/dash-template.html
+++ b/html/dash-template.html
@@ -10,7 +10,7 @@
 		content="Txto is a free service that lets you create the fastest, simplest, most shareable web pages on the internet using any phone, tablet, or computer you have." />
 	<meta name="author" content="Wei" />
 
-	<meta property="og:url" content="https://txto.onrender.com" />
+	<meta property="og:url" content="https://txto.eu.org" />
 	<meta property="og:title" content="Txto - Fast web pages for everybody" />
 	<meta property="og:image" content="//cdn.jsdelivr.net/npm/txto@1.0.5/txto_196.png" />
 	<meta property="og:site_name" content="Txto" />
@@ -49,20 +49,21 @@
 
 <body>
 	<h2><a href="/">Txto</a>  </h2>
-
+	<p>current <text id="currentbuildtime"> </text></p>
+ 
 	<div class="overlay" style="display: none;">
 		<div class="loader"></div>
 		<div class="close-btn" id="close-btn">&times;</div>
 	</div>
 	
 	<p>choose html package,（tar.gz.enc）</p>
-	<form>
+	<form id = "myform">
 		<input id="file" type="file" ></input>
 		<br>
 		<br>
 		<br>
 		<br>
-		<input class="btn" type="button"   id="submit" name="submit" value="Create Post" />
+		<input class="btn" type="button"   id="submit" name="submit" value="Update Html Package" />
 		
 	</form>
 	
