--- a/html/edit-template.html
+++ b/html/edit-template.html
@@ -10,7 +10,7 @@
 		content="Txto is a free service that lets you create the fastest, simplest, most shareable web pages on the internet using any phone, tablet, or computer you have." />
 	<meta name="author" content="Wei" />
 
-	<meta property="og:url" content="https://txto.onrender.com" />
+	<meta property="og:url" content="https://txto.eu.org" />
 	<meta property="og:title" content="Txto - Fast web pages for everybody" />
 	<meta property="og:image" content="//cdn.jsdelivr.net/npm/txto@1.0.5/txto_196.png" />
 	<meta property="og:site_name" content="Txto" />
