--- a/html/dash-template.html
+++ b/html/dash-template.html
@@ -47,6 +47,17 @@
 	<link href="//cdn.jsdelivr.net/npm/txto@1.0.5/txto.min.css" rel="stylesheet" type="text/css" />
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRPJZGBBVY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZRPJZGBBVY');
+</script>
+
+
 <body>
 	<h2><a href="/">Txto</a>  </h2>
 	<p>current <text id="currentbuildtime"> </text></p>
@@ -63,7 +74,7 @@
 		<br>
 		<br>
 		<br>
-		<input class="btn" type="button"   id="submit" name="submit" value="Update Html Package" />
+		<input class="btn" type="button"   id="submit" name="submit" value="Update Html" />
 		
 	</form>
 	
