--- a/html/edit-template.html
+++ b/html/edit-template.html
@@ -47,6 +47,17 @@
 	<link href="//cdn.jsdelivr.net/npm/txto@1.0.5/txto.min.css" rel="stylesheet" type="text/css" />
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRPJZGBBVY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZRPJZGBBVY');
+</script>
+
+
 <body>
 	<h1><a href="/">Txto</a></h1>
 	<div id="beforecreate">
