--- a/html/succ-template.html
+++ b/html/succ-template.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
 <html>
- 
- 
 <head>
 	<!-- new server -->
 	<meta charset="utf-8" />
@@ -46,6 +43,17 @@
 
 	<link href="//cdn.jsdelivr.net/npm/txto@1.0.5/txto.min.css" rel="stylesheet" type="text/css" />
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRPJZGBBVY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZRPJZGBBVY');
+</script>
+
 
 <body>
 	<h2><a href="/">Txto</a>  </h2>
