--- a/html/terms.html
+++ b/html/terms.html
@@ -8,6 +8,17 @@
 	<title>txto - Terms of Service</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRPJZGBBVY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZRPJZGBBVY');
+</script>
+
+
 <body>
     <h1><a href="/">txto</a> Terms of Service</h1>
     
