--- a/html/about.html
+++ b/html/about.html
@@ -9,6 +9,17 @@
 	<title>Txto - Fast web pages for everybody</title>
 	<style type="text/css">body {font-size: 1.1em; line-height: 1.5em; max-width: 45em; margin: auto; padding: 0 2%;} img {max-width: 100%; display: block; margin: .75em auto;}</style>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRPJZGBBVY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZRPJZGBBVY');
+</script>
+
 <body>
 <h1>About</h1>
 
