--- a/html/done.html
+++ b/html/done.html
@@ -41,6 +41,17 @@
     
     <link href="//cdn.jsdelivr.net/npm/txto@1.0.3/txto.css" rel="stylesheet" type="text/css">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRPJZGBBVY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZRPJZGBBVY');
+</script>
+
 <body>
     
 <h1><a href="/">Txto</a></h1>
