--- a/html/how.html
+++ b/html/how.html
@@ -8,6 +8,17 @@
 	<title>How to use txti</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRPJZGBBVY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZRPJZGBBVY');
+</script>
+
+
 <body>
 	<h1>How to make a web page with <a href="/">txto</a></h1>
     
