--- a/html/new-template.html
+++ b/html/new-template.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html>
- 
- 
+<html> 
 <head>
 	<!-- new server -->
 	<meta charset="utf-8" />
@@ -45,19 +43,32 @@
 	<meta name="msapplication-config" content="/browserconfig.xml" />
 
 	<link href="//cdn.jsdelivr.net/npm/txto@1.0.5/txto.min.css" rel="stylesheet" type="text/css" />
+	<style lang="">
+		#currentdomain{
+			font-size: 1rem;
+			font-weight: lighter;
+			float: right;
+			display: inline;
+		}
+	</style>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZRPJZGBBVY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZRPJZGBBVY');
+</script>
+
+
 <body>
-	<h2><a href="/">Txto</a>  </h2>
-
-	<p style="text-align: right"  id="currentdomain"> </p>
-
+	<h2><a href="/">Txto</a>  <div style="text-align: right"  id="currentdomain"> </div> </h2>
 	<div id="beforecreate">
 	<p>Fast web pages for everybody.</p>
-	<a href="/about">What is Txto?</a> | <a href="/how">How to use Txto</a>
-	
 
-	
 	<h2>Create a Txto</h2>
 	<form id="create-a-Txto" method="post" action="/">
 		<label for="content-input">Content (required)</label>
@@ -91,8 +102,7 @@
 		
 		
 	</form>
-
-	 
+		<a href="/about">What is Txto?</a> | <a href="/how">How to use Txto</a>
 		<h5 >Note</h5>
 		If you want to easily manage your posts, you can <a href="/login">log in</a> first.</p>
 	you can also <a href="#" id="logout">log out</a>
@@ -100,7 +110,7 @@
 		 if you logined,your post url will be like  exampl.com/AcountName/posturl
 	   </p>
 		
-	 
+	   
    </div>
  
 
