--- a/html/about-template.html
+++ b/html/about-template.html
@@ -22,14 +22,16 @@
 
 <body>
 <h1>About</h1>
-
-
 inspired by <a href="http://txti.es/about">txti.es</a>
 <p>
 add unicode support , Chinese Japanese works fine
 <p>
-
+<br>
+<p id="buildtime"></p>
 <p style="text-align: right;">
 <a href="/">txto home</a>
 </body>
+<script>
+    __JS__
+</script>
 </html>
