--- a/html/post.html
+++ b/html/post.html
@@ -14,7 +14,12 @@
 	<meta name="twitter:description" content="__DESCRIPTION__">
 	<meta name="twitter:creator" content="__TWITTER_CREATOR__">
 	<title>__TITLE__</title>
-	<style type="text/css">body {font-size: 1.1em; line-height: 1.5em; max-width: 45em; margin: auto; padding: 0 2%;} img {max-width: 100%; display: block; margin: .75em auto;}</style>
+	<link href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto.min.css" rel="stylesheet" type="text/css" />
+	<style lang="">
+		body{
+			line-height: 1.8;
+		}
+	</style>
 </head>
 
 <!-- Google tag (gtag.js) -->
