--- a/html/new-template.html
+++ b/html/new-template.html
@@ -10,7 +10,7 @@
 
 	<meta property="og:url" content="https://txto.eu.org" />
 	<meta property="og:title" content="Txto - Fast web pages for everybody" />
-	<meta property="og:image" content="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_196.png" />
+	<meta property="og:image" content="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_196.png" />
 	<meta property="og:site_name" content="Txto" />
 	<meta property="og:description"
 		content="Txto is a free service that lets you create the fastest, simplest, most shareable web pages on the internet using any phone, tablet, or computer you have." />
@@ -24,33 +24,33 @@
 
 	<title>Txto - Fast web pages for everybody</title>
 
-	<link rel="shortcut icon" href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_16.png" />
-	<link rel="apple-touch-icon" sizes="57x57" href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_57.png" />
-	<link rel="apple-touch-icon" sizes="114x114" href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_144.png" />
-	<link rel="apple-touch-icon" sizes="72x72" href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_72.png" />
-	<link rel="apple-touch-icon" sizes="144x144" href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_144.png" />
-	<link rel="apple-touch-icon" sizes="60x60" href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_60.png" />
-	<link rel="apple-touch-icon" sizes="120x120" href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_120.png" />
-	<link rel="apple-touch-icon" sizes="76x76" href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_76.png" />
-	<link rel="apple-touch-icon" sizes="152x152" href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_152.png" />
-	<link rel="icon" type="image/png" href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_196.png" sizes="196x196" />
-	<link rel="icon" type="image/png" href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_160.png" sizes="160x160" />
-	<link rel="icon" type="image/png" href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_96.png" sizes="96x96" />
-	<link rel="icon" type="image/png" href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_16.png" sizes="16x16" />
-	<link rel="icon" type="image/png" href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_32.png" sizes="32x32" />
+	<link rel="shortcut icon" href="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_16.png" />
+	<link rel="apple-touch-icon" sizes="57x57" href="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_57.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_144.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_72.png" />
+	<link rel="apple-touch-icon" sizes="144x144" href="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_144.png" />
+	<link rel="apple-touch-icon" sizes="60x60" href="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_60.png" />
+	<link rel="apple-touch-icon" sizes="120x120" href="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_120.png" />
+	<link rel="apple-touch-icon" sizes="76x76" href="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_76.png" />
+	<link rel="apple-touch-icon" sizes="152x152" href="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_152.png" />
+	<link rel="icon" type="image/png" href="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_196.png" sizes="196x196" />
+	<link rel="icon" type="image/png" href="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_160.png" sizes="160x160" />
+	<link rel="icon" type="image/png" href="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_16.png" sizes="16x16" />
+	<link rel="icon" type="image/png" href="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_32.png" sizes="32x32" />
 	<meta name="msapplication-TileColor" content="#9f00a7" />
-	<meta name="msapplication-TileImage" content="//cdn.jsdelivr.net/npm/txto@1.0.8/txto_144.png" />
+	<meta name="msapplication-TileImage" content="//cdn.jsdelivr.net/npm/txto@1.0.9/txto_144.png" />
 	<meta name="msapplication-config" content="/browserconfig.xml" />
 
-	<link href="//cdn.jsdelivr.net/npm/txto@1.0.8/txto.min.css" rel="stylesheet" type="text/css" />
+	<link href="//cdn.jsdelivr.net/npm/txto@1.0.9/txto.min.css" rel="stylesheet" type="text/css" />
 	<style lang="">
-		#currentdomain{
-			font-size: 1rem;
-			font-weight: lighter;
-			float: right;
-			display: inline;
-		}
-	</style>
+	#currentdomain{
+		font-size: 1rem;
+		font-weight: lighter;
+		float: right;
+		display: inline;
+	}
+</style>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -95,10 +95,32 @@
 		<p>
 			By continuing, you agree to the <a href="/terms">terms of service.</a>
 		</p>
-	
-		<input class="btn" type="button"   id="showmore" name="submit" value="Show more options" />
+
+		<div><label>remove after:</label>
+			<input
+			  type="radio"
+			  id="expireTime1"
+			  name="expire"
+			  class="radio"
+			  value="0"
+			  checked =true/>
+			<label for="expireTime1">Nerver</label>
+	  
+			<input type="radio" class="radio" id="expireTime2" name="expire" value="7" />
+			<label for="expireTime2">7 days</label>
+			<!-- <input type="radio"  class="radio" id="expireTime5" name="expire" value="15" />
+			<label for="expireTime5">15 days</label> -->
+	  
+			<input type="radio"  class="radio" id="expireTime3" name="expire" value="30" />
+			<label for="expireTime3">30 days</label>
+
+			<input type="radio"  class="radio" id="expireTime4" name="expire" value="180" />
+			<label for="expireTime4">180 days</label>
+		  </div>
+		<p></p>
+		<button  type="button"   id="showmore" name="submit" value="Show more options" > Show more options </button>
 		<p>
-		<input class="btn" type="button"   id="submit" name="submit" value="Create Post" />
+		<button type="button"   id="submit" name="submit" value="Create Post" >Create Post</button>
 		
 		
 	</form>
@@ -122,7 +144,6 @@
 </body>
 <script>
     __JS__
-
 </script>
 
 </html>
