--- a/html/my-template.html
+++ b/html/my-template.html
@@ -75,6 +75,16 @@
 			text-decoration: line-through;
 			text-decoration-color: #808080;
 		}
+
+		.edit,
+		.delete{
+			text-decoration: none;
+			color: #808080;
+		}
+		.edit:hover,
+		.delete:hover{
+			color: #f00;
+		}
 	</style>
 </head>
 
