--- a/html/postdetail.html
+++ b/html/postdetail.html
@@ -17,6 +17,7 @@
 	<link href="//cdn.jsdelivr.net/npm/txto@1.1.0/txto.min.css" rel="stylesheet" type="text/css" />
 	<style lang="">
 		body{
+			padding-top: 1rem;
 			line-height: 1.8;
 		}
 	</style>
