--- a/html/404.html
+++ b/html/404.html
@@ -21,11 +21,11 @@
 </script>
 
 
-<body>
+<body> <div class="maincard">
 <h1>No post Here</h1>
 Why don't you make one?
 
 <p>
 <a href="/">txto</a>
-</body>
+</div></body>
 </html>
