--- a/html/about-template.html
+++ b/html/about-template.html
@@ -20,7 +20,7 @@
   gtag('config', 'G-ZRPJZGBBVY');
 </script>
 
-<body>
+<body> <div class="maincard">
 <h1>About</h1>
 inspired by <a href="http://txti.es/about">txti.es</a>
 <p>
@@ -30,7 +30,7 @@ add unicode support , Chinese Japanese works fine
 <p id="buildtime"></p>
 <p style="text-align: right;">
 <a href="/">txto home</a>
-</body>
+</div></body>
 <script>
     __JS__
 </script>
