--- a/html/how.html
+++ b/html/how.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Learn how to use txto to make the fastest, simplest web page on the internet.">
-    <link href="//cdn.jsdelivr.net/npm/txto@1.1.3/txto.min.css" rel="stylesheet" type="text/css" />
+    <link href="//cdn.jsdelivr.net/npm/txto@1.1.7/txto.min.css" rel="stylesheet" type="text/css" />
 	<title>How to use txti</title>
 </head>
 
@@ -19,7 +19,7 @@
 </script>
 
 
-<body>
+<body> <div class="maincard">
 	<h1>How to make a web page with <a href="/">txto</a></h1>
     
     <p>The only thing you have to give txto is the "Content." Txto takes care of the rest, but you can take advantage of these options:</p>
@@ -70,5 +70,5 @@
     </ul>
     <p class="footer"><a href="/">txti home</a></p>
 
-</body>
+</div></body>
 </html>
