--- a/html/postdetail.html
+++ b/html/postdetail.html
@@ -14,13 +14,8 @@
 	<meta name="twitter:description" content="__DESCRIPTION__">
 	<meta name="twitter:creator" content="__TWITTER_CREATOR__">
 	<title>__TITLE__</title>
-	<link href="//cdn.jsdelivr.net/npm/txto@1.1.3/txto.min.css" rel="stylesheet" type="text/css" />
-	<style lang="">
-		body{
-			padding-top: 1rem;
-			line-height: 1.8;
-		}
-	</style>
+	<link href="//cdn.jsdelivr.net/npm/txto@1.1.7/txto.min.css" rel="stylesheet" type="text/css" />
+ 
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -33,10 +28,8 @@
   gtag('config', 'G-ZRPJZGBBVY');
 </script>
 
-<body>
-__BODY__
-
-
-<p style="text-align: right"><a href="/">txto</a></p>
-</body>
+<body> <div class="maincard">
+		__BODY__
+		<p style="text-align: right"><a href="/">txto</a></p>
+</div></body>
 </html>
