--- a/html/sign-template.html
+++ b/html/sign-template.html
@@ -5,7 +5,7 @@
 	<!-- new server -->
 	<meta charset="utf-8" />
 
-	<link href="//cdn.jsdelivr.net/npm/txto@1.1.3/txto.min.css" rel="stylesheet" type="text/css" />
+	<link href="//cdn.jsdelivr.net/npm/txto@1.1.7/txto.min.css" rel="stylesheet" type="text/css" />
 	<style lang="">
 		#currentdomain {
 			font-size: 1rem;
@@ -28,7 +28,7 @@
 	gtag("config", "G-ZRPJZGBBVY");
 </script>
 
-<body>
+<body> <div class="maincard">
 	<h2>
 		<a href="/">Txto</a>
 		<div style="text-align: right" id="currentdomain"></div>
@@ -64,7 +64,7 @@
 		<div class="loader"></div>
 		<div class="close-btn">&times;</div>
 	</div>
-</body>
+</div></body>
 <script>
 	__JS__;
 </script>
