--- a/html/terms.html
+++ b/html/terms.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Legal agreement for using txto.">
-    <link href="//cdn.jsdelivr.net/npm/txto@1.1.3/txto.min.css" rel="stylesheet" type="text/css" />
+    <link href="//cdn.jsdelivr.net/npm/txto@1.1.7/txto.min.css" rel="stylesheet" type="text/css" />
 	<title>txto - Terms of Service</title>
 </head>
 
@@ -19,7 +19,7 @@
 </script>
 
 
-<body>
+<body> <div class="maincard">
     <h1><a href="/">txto</a> Terms of Service</h1>
     
     <h2>IMPORTANT - READ BEFORE USING.</h2>
@@ -82,5 +82,5 @@
 
 <p>END OF AGREEMENT</p>
     <p class="footer"><a href="/">txto home</a></p>
-</body>
+</div></body>
 </html>
