--- a/html/postdetail.html
+++ b/html/postdetail.html
@@ -14,8 +14,12 @@
 	<meta name="twitter:description" content="__DESCRIPTION__">
 	<meta name="twitter:creator" content="__TWITTER_CREATOR__">
 	<title>__TITLE__</title>
-	<link href="//cdn.jsdelivr.net/npm/txto@1.2.5/txto.min.css" rel="stylesheet" type="text/css" />
- 
+	<link href="//cdn.jsdelivr.net/npm/txto@1.2.6/txto.min.css" rel="stylesheet" type="text/css" />
+	<style>
+		img{
+			max-width: 100%
+		}
+	</style>
 </head>
 
 <!-- Google tag (gtag.js) -->
