--- a/html/cfg-api-list.html
+++ b/html/cfg-api-list.html
@@ -3,7 +3,7 @@ edit #编辑
 list #获取自己
 listbypath #获取用户名下公开post
 login #登录
-randlist #随机post
+# randlist #随机post
 recentlist #最近post
 sign #签名
 updatehtml # 更新html 和配置
