--- a/html/cfg-safe-paths.html
+++ b/html/cfg-safe-paths.html
@@ -5,4 +5,5 @@ succ #创建成功
 post #空白
 post2 # hash中指定posttoken
 robots.txt #robots.txt
-rand # 随机post列表
+# rand # 随机post列表   apilist.html 中的 randlist
+recent #最近的  apilist.html 中的 recentlist
