--- a/html/how.html
+++ b/html/how.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Learn how to use txto to make the fastest, simplest web page on the internet.">
     <link href="//cdn.jsdelivr.net/npm/txto@1.2.7/txto.min.css" rel="stylesheet" type="text/css" />
-	<title>How to use txti</title>
+	<title>How to use Txto</title>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -25,19 +25,19 @@
     <p>The only thing you have to give txto is the "Content." Txto takes care of the rest, but you can take advantage of these options:</p>
     <dl>
         <dt>Custom URL</dt>
-        <dd>This is the part that goes after "txti.es/" like "txti.es/barry". Currently only accepts lowercase letters (a-z), numbers (0-9), and dashes (-). If you put anything else in there, txti will change it.</dd>
+        <dd>This is the part that goes after "Txto.es/" like "txto.es/barry". Currently only accepts lowercase letters (a-z), numbers (0-9), and dashes (-). If you put anything else in there, Txto will change it.</dd>
         <dt>Custom Edit Code</dt>
-        <dd>Txti will give you a random edit code, but you can change it. You have to have this to make changes to the txti, and it can never EVER be retrieved if lost.</dd>
+        <dd>Txto will give you a random edit code, but you can change it. You have to have this to make changes to the Txto, and it can never EVER be retrieved if lost.</dd>
         <dt>Title</dt>
-        <dd>Give your txti a relevant title so it shows up better when shared on social media, search results, and in browser windows.</dd>
+        <dd>Give your Txto a relevant title so it shows up better when shared on social media, search results, and in browser windows.</dd>
         <dt>Author</dt>
         <dd>Let people know who made this! This shows up in some searches and social media posts, and your Twitter handle works really nicely if you post the link on Twitter.</dd>
         <dt>Description</dt>
-        <dd>This is a short (200 character) summary of the page. This shows up in Twitter cards and search results. Txti will automatically use the first 200 characters of your txti as a description if you don't provide one.</dd>
+        <dd>This is a short (200 character) summary of the page. This shows up in Twitter cards and search results. Txto will automatically use the first 200 characters of your Txto as a description if you don't provide one.</dd>
     </dl>
 
-    <h2>Make your txti easy to read and understand</h2>
-    <p>You can make your txti robust and full-featured with links, images, lists, headings, and more. Txti uses a popular set of rules called <a href="http://en.wikipedia.org/wiki/Markdown">Markdown</a>.</p>
+    <h2>Make your Txto easy to read and understand</h2>
+    <p>You can make your Txto robust and full-featured with links, images, lists, headings, and more. Txto uses a popular set of rules called <a href="http://en.wikipedia.org/wiki/Markdown">Markdown</a>.</p>
     <ul>
         <li>#Heading 1 = biggest heading<br>
             ##Heading 2 = second biggest heading<br>
@@ -47,7 +47,7 @@
       <li>Return twice (leaving an empty line) starts a new paragraph.</li>
         <li>*italics* = <em>italics</em></li>
         <li>**bold** = <strong>bold</strong></li>
-        <li>Links: [link to txti](http://txti.es) = <a href="http://txti.es">link to txti</a> (note: be sure to include the "http://" part of the link)</li>
+        <li>Links: [link to Txto](http://Txto.es) = <a href="http://Txto.es">link to Txto</a> (note: be sure to include the "http://" part of the link)</li>
         <li>Images*: ![Monkey selfie](http://i.imgur.com/FXSBf8c.jpg)
         <li>Bulleted lists:<br>
             - Bulleted item a<br>
@@ -60,15 +60,14 @@
             3. Numbered item 3
         </li>
     </ul>
-    <p>*Images must be uploaded somewhere else (we recommend <a href="http://imgur.com">imgur.com</a>). Because images can really slow down pages and we're all about "fast web pages for everybody," images are not displayed by default. The reader has the option of displaying the images in the page or just viewing links to them. See an example at <a href="/images">txti.es/images</a>.</p>
+    <p>*Images must be uploaded somewhere else (we recommend <a href="http://imgur.com">imgur.com</a>). Because images can really slow down pages and we're all about "fast web pages for everybody," images are not displayed by default. The reader has the option of displaying the images in the page or just viewing links to them. See an example at <a href="/images">Txto.es/images</a>.</p>
 
 
     <h2>Important notes</h2>
     <ul>
-        <li>Txti will delete any pages that are more than 6 months old but have been viewed less than two times ever. If you make a txti and forget about it, it might not be there 6 months later.</li>
-        <li>Legal concerns or pages you think violate txti's <a href="/terms">terms of service</a> can be sent via private message or tweet to <a href="https://twitter.com/@txties">@txties on Twitter.</a></li>
-    </ul>
-    <p class="footer"><a href="/">txti home</a></p>
+        <li>Txto will delete any pages that are more than 6 months old but have been viewed less than two times ever. If you make a Txto and forget about it, it might not be there 6 months later.</li>
+     </ul>
+    <p class="footer"><a href="/">Txto home</a></p>
 
 </div></body>
 </html>
