--- a/html/about-template.html
+++ b/html/about-template.html
@@ -27,6 +27,15 @@ inspired by <a href="http://txti.es/about">txti.es</a>
 add unicode support , Chinese Japanese works fine
 <p>
 <br>
+
+<p>
+This website is hosted on a <strong>free</strong> internet service, which may result in slower loading times. Please be patient and try again. If you have any suggestions or issues, please contact <a href="https://twitter.com/gr1dyZ0">@gr1dyZ0</a> on twitter</p>
+
+
+
+
+
+<br>
 <p id="buildtime"></p>
 <p style="text-align: right;">
 <a href="/">txto home</a>
