--- a/html/how.html
+++ b/html/how.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Learn how to use txto to make the fastest, simplest web page on the internet.">
-    <link href="//cdn.jsdelivr.net/npm/txto@1.2.7/txto.min.css" rel="stylesheet" type="text/css" />
+    <link href="//cdn.jsdelivr.net/npm/txto@1.2.9/txto.min.css" rel="stylesheet" type="text/css" />
 	<title>How to use Txto</title>
 </head>
 
@@ -25,7 +25,7 @@
     <p>The only thing you have to give txto is the "Content." Txto takes care of the rest, but you can take advantage of these options:</p>
     <dl>
         <dt>Custom URL</dt>
-        <dd>This is the part that goes after "Txto.es/" like "txto.es/barry". Currently only accepts lowercase letters (a-z), numbers (0-9), and dashes (-). If you put anything else in there, Txto will change it.</dd>
+        <dd>This is the part that goes after "Txto.eu.org/" like "txto.eu.org/barry". Currently only accepts lowercase letters (a-z), numbers (0-9), and dashes (-). If you put anything else in there, Txto will change it.</dd>
         <dt>Custom Edit Code</dt>
         <dd>Txto will give you a random edit code, but you can change it. You have to have this to make changes to the Txto, and it can never EVER be retrieved if lost.</dd>
         <dt>Title</dt>
@@ -47,7 +47,7 @@
       <li>Return twice (leaving an empty line) starts a new paragraph.</li>
         <li>*italics* = <em>italics</em></li>
         <li>**bold** = <strong>bold</strong></li>
-        <li>Links: [link to Txto](http://Txto.es) = <a href="http://Txto.es">link to Txto</a> (note: be sure to include the "http://" part of the link)</li>
+        <li>Links: [link to Txto](http://Txto.eu.org) = <a href="http://Txto.eu.org">link to Txto</a> (note: be sure to include the "http://" part of the link)</li>
         <li>Images*: ![Monkey selfie](http://i.imgur.com/FXSBf8c.jpg)
         <li>Bulleted lists:<br>
             - Bulleted item a<br>
@@ -60,13 +60,9 @@
             3. Numbered item 3
         </li>
     </ul>
-    <p>*Images must be uploaded somewhere else (we recommend <a href="http://imgur.com">imgur.com</a>). Because images can really slow down pages and we're all about "fast web pages for everybody," images are not displayed by default. The reader has the option of displaying the images in the page or just viewing links to them. See an example at <a href="/images">Txto.es/images</a>.</p>
+    <p>*Images must be uploaded somewhere else (we recommend <a href="http://imgur.com">imgur.com</a>). Because images can really slow down pages and we're all about "fast web pages for everybody," images are not displayed by default. The reader has the option of displaying the images in the page or just viewing links to them. See an example at <a href="/images">Txto.eu.org/images</a>.</p>
 
-
-    <h2>Important notes</h2>
-    <ul>
-        <li>Txto will delete any pages that are more than 6 months old but have been viewed less than two times ever. If you make a Txto and forget about it, it might not be there 6 months later.</li>
-     </ul>
+ 
     <p class="footer"><a href="/">Txto home</a></p>
 
 </div></body>
