--- a/html/postdetail.html
+++ b/html/postdetail.html
@@ -13,7 +13,7 @@
 	<meta name="twitter:title" content="__TITLE__">
 	<meta name="twitter:description" content="__DESCRIPTION__">
 	<meta name="twitter:creator" content="__TWITTER_CREATOR__">
-	<title>__TITLE__</title>
+	<meta name="robots" content="__ROBOTS__">
 	<link href="//cdn.jsdelivr.net/npm/txto@1.2.9/txto.min.css" rel="stylesheet" type="text/css" />
 	<style>
 		img{
