--- a/html/postdetail.html
+++ b/html/postdetail.html
@@ -14,6 +14,8 @@
 	<meta name="twitter:description" content="__DESCRIPTION__">
 	<meta name="twitter:creator" content="__TWITTER_CREATOR__">
 	<meta name="robots" content="__ROBOTS__">
+	<meta name="my-data-exp" content="__EXPIRE__">
+
 	<link href="//cdn.jsdelivr.net/npm/txto@1.2.9/txto.min.css" rel="stylesheet" type="text/css" />
 	<style>
 		img{
