--- a/html/new-template.html
+++ b/html/new-template.html
@@ -129,7 +129,7 @@
 		If you want to easily manage your posts, you can <a href="/login">log in</a> first.</p>
 	you can also <a href="#" id="logout">log out</a>
 	   <p>
-		 if you logined,your post url will be like  exampl.com/AcountName/posturl
+		<s> if you logined,your post url will be like  exampl.com/AcountName/posturl</s>
 	   </p>
 		
 	   
