--- a/html/cfg-safe-paths.html
+++ b/html/cfg-safe-paths.html
@@ -7,3 +7,7 @@ post2 # hash中指定posttoken
 robots.txt #robots.txt
 rand # 随机post列表   apilist.html 中的 randlist
 recent #最近的  apilist.html 中的 recentlist
+cfg-safe-paths # 白名单路径
+cfg-api-list # api列表
+cfg-pow #工作量
+README 
