--- a/html/dash-template.html
+++ b/html/dash-template.html
@@ -94,7 +94,9 @@
 	</p>
 
 	<button class="btn" type="button"   id="clean" name="submit" value="" >物理删除</button>
- 
+
+	<h2>清空Cache</h2>
+	<button class="btn" type="button"   id="clearCache" name="submit" value="" >清空缓存</button> 
 
 	<p style="text-align: right"><a href="/">txto</a></p>
 
