--- a/html/new-template.html
+++ b/html/new-template.html
@@ -58,6 +58,9 @@
 		opacity: 1;
 		line-height: 1.5;
 		}
+	summary{
+		color: #1188ff;
+	}
 	 
 </style>
 </head>
@@ -80,7 +83,7 @@
 
 	<h2>Create a Txto</h2>
 	<form id="create-a-Txto" method="post" action="/">
-		<label for="content-input">Content (required)</label> <details><summary >Markdown syntax supported
+		<label for="content-input">Content (required)</label> <details><summary > Markdown syntax supported
 		</summary>
 		<pre>
 	#Heading 1 = biggest heading
