--- a/html/post2-template.html
+++ b/html/post2-template.html
@@ -53,7 +53,7 @@
 		<input type="hidden" name="action" value="createpost" />
 		
 		<p>
-		<button type="button"   id="submit" name="submit" value="Create Post" >提交</button>
+		<button type="button"   id="submit" name="submit" value="Create Post" >submmit</button>
 		
 		
 	</form>
