--- a/html/new-template.html
+++ b/html/new-template.html
@@ -160,7 +160,7 @@ placeholder='Markdown syntax supported
 	<a href="/about">What is Txto?</a> | <a href="/how">How to use Txto</a>
 
 	<br>
-	<a href="./post2#%7B%22title%22%3A%22suggestion%22%2C%22token%22%3A%22E5hzaA0kzOUDgulgrj6Y0bXYBKAESEcEcdmBZA9OmpWOpUWSyn0l7vRt4CLK0QjJgM2XH7CjZA24QTOvXnELxO1jO1hhnG1dNXAagpY%3D%22%7D">advise & suggest<a>
+	<a href="./post2#%7B%22title%22%3A%22suggestion%22%2C%22token%22%3A%22E5hzaA0kzOUDgulgrj6Y0bXYBKAESEcEcdmBZA9OmpWOpUWSyn0l7vRt4CLK0QjJgM2XH7CjZA24QTOvXnELxO1jO1hhnG1dNXAagpY%3D%22%7D">😉 advise & suggest<a>
    </div>
  
 
