--- a/html/new-template.html
+++ b/html/new-template.html
@@ -61,6 +61,10 @@
 	summary{
 		color: #1188ff;
 	}
+
+  .radio:checked + .radio-label {
+    color: red;
+  }
 	 
 </style>
 </head>
@@ -137,20 +141,20 @@ placeholder='Markdown syntax supported
 			  class="radio"
 			  value="0"
 			  checked =true/>
-			<label for="expireTime1">Never</label>
+			<label class="radio-label" for="expireTime1">Never</label>
 	  
 			<input type="radio" class="radio" id="expireTime2" name="expire" value="1" />
-			<label for="expireTime2">1 day</label>
+			<label  class="radio-label" for="expireTime2">1 day</label>
 			<input type="radio"  class="radio" id="expireTime3" name="expire" value="7" />
-			<label for="expireTime3">7 days</label>
+			<label class="radio-label" for="expireTime3">7 days</label>
 	  
 			<input type="radio"  class="radio" id="expireTime4" name="expire" value="30" />
-			<label for="expireTime4">30 days</label>
+			<label  class="radio-label"for="expireTime4">30 days</label>
 
 			<input type="radio"  class="radio" id="expireTime5" name="expire" value="180" />
-			<label for="expireTime5">180 days</label>
+			<label class="radio-label" for="expireTime5">180 days</label>
 			<input type="radio"  class="radio" id="expireTime6" name="expire" value="365" />
-			<label for="expireTime6">365 days</label>
+			<label  class="radio-label" for="expireTime6">365 days</label>
 		  </div>
 		<p></p>
 		<button  type="button"   id="showmore" name="submit" value="Show more options" > Show more options </button>
