--- a/html/postdetail.html
+++ b/html/postdetail.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+	<title>__TITLE__</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<meta name="author" content="__AUTHOR__">
