--- a/html/login-template.html
+++ b/html/login-template.html
@@ -45,6 +45,11 @@
 	<meta name="msapplication-config" content="/browserconfig.xml" />
 
 	<link href="//cdn.jsdelivr.net/npm/txto@1.4.9/txto.min.css" rel="stylesheet" type="text/css" />
+	<style lang="">
+		button{
+			margin-top: 20px;
+		}
+	</style>
 </head>
 
 <!-- Google tag (gtag.js) -->
