--- a/html/new-template.html
+++ b/html/new-template.html
@@ -67,6 +67,8 @@
   }
 	 
 </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5034009710884860"
+     crossorigin="anonymous"></script>
 </head>
 
 <!-- Google tag (gtag.js) -->
