--- a/html/new-template.html
+++ b/html/new-template.html
@@ -65,6 +65,16 @@
   .radio:checked + .radio-label {
     color: red;
   }
+
+  .tipmsg{
+	padding: 10px;
+	background-color: #f0f0ff;
+	border-left: orange solid 8px;
+	color: #707080;
+	font-weight: 500;
+	font-size: 1.4em;
+
+  }
 	 
 </style>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5034009710884860"
@@ -86,6 +96,7 @@
 	<h2><a href="/">Txto</a>  <div style="text-align: right"  id="currentdomain"> </div> </h2>
 	<div id="beforecreate">
 	<p>Fast web pages for everybody.</p>
+	<p class="tipmsg">  Please do not abuse, this service is hosted on a free internet service :)</p>
 
 	<h2>Create a Txto</h2>
 	<form id="create-a-Txto" method="post" action="/">
