--- a/html/new-template.html
+++ b/html/new-template.html
@@ -69,7 +69,7 @@
   .tipmsg{
 	padding: 10px;
 	background-color: #f0f0ff;
-	border-left: orange solid 8px;
+	border-left: #b3131e solid 8px;
 	color: #707080;
 	font-weight: 500;
 	font-size: 1.4em;
