--- a/html/new-template.html
+++ b/html/new-template.html
@@ -96,7 +96,7 @@
 	<h2><a href="/">Txto</a>  <div style="text-align: right"  id="currentdomain"> </div> </h2>
 	<div id="beforecreate">
 	<p>Fast web pages for everybody.</p>
-	<p class="tipmsg">  Please do not abuse, this service is hosted on a free internet service :)</p>
+	<p class="tipmsg"> Please do not abuse</p>
 
 	<h2>Create a Txto</h2>
 	<form id="create-a-Txto" method="post" action="/">
